--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                                 <a href="index.html" class="menu-links">HOME</a>
                             </li>
                             <li>
-                                <a href="#" class="menu-links">COMPANY</a>
+                                <a href="whyus.html" class="menu-links">Why Us</a>
                             </li>
                             <li>
                                 <a href="#" class="menu-links">SERVICES</a>
