--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
                                 <a href="whyus.html" class="menu-links">Why Us</a>
                             </li>
                             <li>
-                                <a href="#" class="menu-links">SERVICES</a>
+                                <a href="ourteam.html" class="menu-links">Our Team</a>
                             </li>
                             <li>
                                 <a href="about.html" class="menu-links">About</a>
                             </li>
                             <li>
-                                <a href="#" class="menu-links">PROTFOLIO</a>
+                                <a href="team-single.html" class="menu-links">Team Single</a>
                             </li>
                             <li>
-                                <a href="#" class="menu-links">CONTACT</a>
+                                <a href="case-study.html" class="menu-links">Case</a>
                             </li>
                             <li class="contact-show">
                                 <a href="#" class="btn-br btn-round trngl bg-btn">
