--- a/about.html
+++ b/about.html
@@ -192,6 +192,7 @@
         </section>
         <!--Why chose end-->
          
+         
         <footer>
             <!--Email subscribe start  -->
           <div class="footer-one">
@@ -244,11 +245,11 @@
                                   </li>
                                   <li>
                                       <span><i class="fas fa-phone-alt"></i></span>
-                                      <p>Phone <span> <a href="tel:+10000000000">+1 0000 000 000</a></span></p>
+                                      <p>Phone <span> <a href="tel:+01812409989">+01812409989</a></span></p>
                                   </li>
                                   <li>
                                       <span><i class="fas fa-map-marker-alt"></i></span>
-                                      <p>Address <span> 123 Business Centre London SW1A 1AA</span></p>
+                                      <p>Address <span> Dhaka,Jamalpur,Sarishabari</span></p>
                                     </li>
                               </ul>
                           </div>
@@ -348,7 +349,7 @@
                               <a href="javascript:void(0)" target="blank"><i class="fab fa-behance"></i></a>
                           </div>
                           <div class="footer-copy-right text-c">
-                              <p>Copyright © 2020 Niwax. All rights reserved. Template By Rajesh Doot</p>
+                              <p>Copyright © 2020  All rights reserved. Template By Md Zubaidur Islam</p>
                           </div>
                     </div>
                   </div>
