--- a/index.html
+++ b/index.html
@@ -606,13 +606,13 @@
                             <img src="./images/location/newyork.png" alt="">
                         </div>
                         <div class="location-text">
-                                <h4>
-                                    <a href="#">New York</a>
-                               </h4>
-                               <p>603 FA Forest Avenue, New York, USA 10021</p>
-                               <a href="" class="btn-m btn-bg hover-btn btn-outline">View on map
-                                <i class="fas fa-chevron-right fa-icon"></i>
-                            </a>
+                            <h4>
+                                <a href="#">Jamalpur</a>
+                           </h4>
+                           <p>2050,Dhaka , Jamalpur, Sarishabri</p>
+                           <a href="" class="btn-m btn-bg hover-btn btn-outline">View on map
+                            <i class="fas fa-chevron-right fa-icon"></i>
+                        </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-4">
@@ -620,14 +620,14 @@
                             <img src="./images/location/rome.png" alt="">
                         </div>
                         <div class="location-text">
-                                <h4>
-                                    <a href="#">Rome</a>
-                               </h4>
-                               <p>9988 Piazzetta Scalette Rubiani 99, Rome, 84090</p>
-                               <a href="" class="btn-m btn-bg hover-btn btn-outline">View on map
-                                <i class="fas fa-chevron-right fa-icon"></i>
-                            </a>
-                        </div>
+                            <h4>
+                                <a href="#">Jamalpur</a>
+                           </h4>
+                           <p>2050,Dhaka , Jamalpur, Sarishabri</p>
+                           <a href="" class="btn-m btn-bg hover-btn btn-outline">View on map
+                            <i class="fas fa-chevron-right fa-icon"></i>
+                        </a>
+                    </div>
                     </div>
                     <div class="col-lg-4 col-sm-4">
                         <div class="location-card">
@@ -635,9 +635,9 @@
                         </div>
                         <div class="location-text">
                                 <h4>
-                                    <a href="#">Sydney</a>
+                                    <a href="#">Jamalpur</a>
                                </h4>
-                               <p>2449 Columbia Boulevard, Sydney, 10021</p>
+                               <p>2050,Dhaka , Jamalpur, Sarishabri</p>
                                <a href="" class="btn-m btn-bg hover-btn btn-outline">View on map
                                 <i class="fas fa-chevron-right fa-icon"></i>
                             </a>
@@ -700,11 +700,11 @@
                                     </li>
                                     <li>
                                         <span><i class="fas fa-phone-alt"></i></span>
-                                        <p>Phone <span> <a href="tel:+10000000000">+1 0000 000 000</a></span></p>
+                                        <p>Phone <span> <a href="tel:+01812409989">+01812409989</a></span></p>
                                     </li>
                                     <li>
                                         <span><i class="fas fa-map-marker-alt"></i></span>
-                                        <p>Address <span> 123 Business Centre London SW1A 1AA</span></p>
+                                        <p>Address <span> Dhaka,Jamalpur,Sarishabari</span></p>
                                       </li>
                                 </ul>
                             </div>
@@ -804,7 +804,7 @@
                                 <a href="javascript:void(0)" target="blank"><i class="fab fa-behance"></i></a>
                             </div>
                             <div class="footer-copy-right text-c">
-                                <p>Copyright © 2020 Niwax. All rights reserved. Template By Rajesh Doot</p>
+                                <p>Copyright © 2020  All rights reserved. Template By Md Zubaidur Islam</p>
                             </div>
                       </div>
                     </div>
