--- a/index.html
+++ b/index.html
@@ -16,10 +16,27 @@
         <!-- template-style-->
         <link rel="stylesheet" href="assets/css/style.css">
 
-        <title>NIWAX</title>
+        <title>Build New Company</title>
     </head>
     <body>
-
+         <!--Mobile menu -->
+         <div class="mobaile-menu">
+            <div class="m-header d-flex justify-content-between">
+                <h2 class="nav-title">Niwax</h2> 
+                <a href="#" id="close"><img src="./icon/colse.png" alt=""></a>
+            </div>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Team</a></li>
+                <li><a href="#">Case Study</a></li>
+                <li><a href="#">Shortcode</a></li>
+                <li><a href="#">Protfolio</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <!--End Mobile -->
         <!-- Start header -->
         <header class="main-header fixed-header">
             <div class="container-fluid">
@@ -61,10 +78,28 @@
                             </li>
                         </ul>
                     </div>
+                    <div class="mobaile-menu-2">
+                        <ul>
+                            <li>
+                                <a href="#" class="btn-br btn-round trngl bg-btn">
+                                    <i class="fas fa-envelope-open-text"></i>
+                                </a>
+                            </li>
+                            <li class="nav-m">
+                                <a href="#" class="tigger-m ">
+                                    <span></span>
+                                </a>
+                            <!-- </li>
+                            <li>
+                                <a href="#" id="close1"><img src="./icon/colse.png" alt=""></a>
+                            </li> -->
+                        </ul>
+                    </div>
                 </div>
             </div>
         </header>
         <!--End Header -->
+       
         <!--Start hero -->
         <section class="hero-section hero-bg-bg1 bg-gradient">
             <div class="block-content">
