--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             rel="stylesheet">
         <!-- template-style-->
         <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/responsive.css">
 
         <title>Build New Company</title>
     </head>
@@ -229,7 +230,7 @@
             <div class="container">
                 <div class="row justify-content-center t-ctr">
                     <div class="col-lg-4 col-sm-6">
-                        <div class="counter-block">
+                        <div class="counter-block mt40">
                             <div class="counter-icon">
                                 <img src="images/icons/startup.svg" alt="years" class="img-fluid">
                             </div>
@@ -240,7 +241,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <div class="counter-block">
+                        <div class="counter-block mt40">
                             <div class="counter-icon">
                                 <img src="images/icons/team.svg" alt="team" class="img-fluid">
                             </div>
@@ -253,7 +254,7 @@
                 </div>
                 <div class="row mt100 text-c small">
                     <div class="col-lg-3 col-sm-6">
-                        <div class="counter-block">
+                        <div class="counter-block mt40">
                             <div class="counter-icon">
                                 <img src="images/icons/deal.svg" alt="team" class="img-fluid">
                             </div>
@@ -264,7 +265,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <div class="counter-block">
+                        <div class="counter-block mt40">
                             <div class="counter-icon">
                                 <img src="images/icons/computers.svg" alt="team" class="img-fluid">
                             </div>
@@ -275,7 +276,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <div class="counter-block">
+                        <div class="counter-block mt40">
                             <div class="counter-icon">
                                 <img src="images/icons/worker.svg" alt="team" class="img-fluid">
                             </div>
@@ -286,7 +287,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <div class="counter-block">
+                        <div class="counter-block mt40">
                             <div class="counter-icon">
                                 <img src="images/icons/customer-service.svg" alt="team" class="img-fluid">
                             </div>
@@ -384,27 +385,27 @@
                         <div class="client-block">
                             <ul>
                                 <li>
-                                    <div class="clients-logo">
+                                    <div class="clients-logo mb30">
                                         <img class="img-fluid" src="images/client/clients-1.png" alt="">
                                     </div>
                                 </li>
                                 <li>
-                                    <div class="clients-logo">
+                                    <div class="clients-logo mb30">
                                         <img class="img-fluid" src="images/client/clients-2.png" alt="">
                                     </div>
                                 </li>
                                 <li>
-                                    <div class="clients-logo">
+                                    <div class="clients-logo mb30">
                                         <img class="img-fluid" src="images/client/clients-3.png" alt="">
                                     </div>
                                 </li>
                                 <li>
-                                    <div class="clients-logo">
+                                    <div class="clients-logo mb30">
                                         <img class="img-fluid" src="images/client/clients-4.png" alt="">
                                     </div>
                                 </li>
                                 <li>
-                                    <div class="clients-logo">
+                                    <div class="clients-logo mb30">
                                         <img class="img-fluid" src="images/client/clients-5.png" alt="">
                                     </div>
                                 </li>
@@ -432,8 +433,8 @@
                         <div class="col-lg-4">
                             <div class="same-hedding text-l ">
                                 <span>INDUSTRIES WE WORK FOR</span>
-                                <h2>Helping Businesses in All Domains</h2>
-                                <p>Successfully delivered digital products Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <h2 >Helping Businesses in All Domains</h2>
+                                <p class="mb30 mt30">Successfully delivered digital products Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                             </div>
                         </div>
                         <div class="col-lg-8">
@@ -544,7 +545,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5 v-center">
-                            <div class="same-hedding text-l ">
+                            <div class="same-hedding text-l mb40 ">
                                 <span>CLIENTS TESTIMONIAL</span>
                                 <h2>What our clients say about our Company.</h2>
                             </div>
@@ -576,37 +577,39 @@
           <section class="contact-form pad-tb">
                 <div class="container">
                     <div class="row bg-c">
-                        <div class="col-lg-6 v-center">
+                        <div class="col-lg-6 v-center mb60 ">
                             <div class="same-hedding text-l ">
                                 <span>CONTACT NOW</span>
                                 <h2>Have Question? Write a Message</h2>
                             </div>
                             <div class="contact-forms mt-5">
-                                <form action="">
+                                <form action="" class="form-block-c">
                                     <div class="row">
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-6  col-md-6">
                                             <input type="text" class="form-control" placeholder="Full Name">
                                         </div>
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-6 col-md-6">
                                             <input type="text" class="form-control" placeholder="Email Address">
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-6 col-md-6">
                                             <input type="text" class="form-control" placeholder="Contact Number">
                                         </div>
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-6 col-md-6">
                                             <input type="text" class="form-control" placeholder="Subject">
                                         </div>
                                     </div>
                                     <div class="field">
                                         <textarea name="message" class="form-control" id="" cols="30" rows="5"></textarea>
                                     </div>
+                                   <div class="col-lg-12 col-md-12">
                                     <div class="form-check">
                                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                         <label class="form-check-label" for="exampleCheck1">I agree to the Terms & Conditions of Business Name.</label>
                                     </div>
-                                    <div class="c-submit mt-3">
+                                   </div>
+                                    <div class="c-submit mt40">
                                         <button class="btn-m bg-btn btn-block lnk">Submit 
                                             <i class="fas fa-chevron-right fa-icon"></i>
                                             <span class="circle"></span>
@@ -636,7 +639,7 @@
                   </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 location-shap col-sm-4">
+                    <div class="col-lg-4 location-shap col-sm-6 mb60">
                         <div class="location-card">
                             <img src="./images/location/newyork.png" alt="">
                         </div>
@@ -650,7 +653,7 @@
                         </a>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-4">
+                    <div class="col-lg-4 col-sm-6 mb60">
                         <div class="location-card">
                             <img src="./images/location/rome.png" alt="">
                         </div>
@@ -664,7 +667,7 @@
                         </a>
                     </div>
                     </div>
-                    <div class="col-lg-4 col-sm-4">
+                    <div class="col-lg-4 col-sm-12 mb60">
                         <div class="location-card">
                             <img src="./images/location/sydeny.png" alt="">
                         </div>
@@ -689,9 +692,9 @@
                 <div class="container">
                     <div class="row ">
                       <div class="col-lg-6">
-                           <div class="email-subcribe ">
+                           <div class="email-subcribe mb50">
                                <h3>Get New Insights Weekly</h3>
-                               <p>News letter dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Enter your email</p>
+                               <p class="mt20">News letter dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Enter your email</p>
                            </div>
                       </div>
                       <div class="col-lg-6 v-center">
@@ -714,7 +717,7 @@
             <div class="footer-two">
                 <div class="container">
                     <div class="row row justify-content-between ">
-                      <div class="col-lg-3">
+                      <div class="col-lg-3 col-md-6 col-sm-6">
                           <div class="widget-one">
                               <a class="navbar-brand mt30 mb25">
                                   <img src="./images/logo/logo.png" class="navber" alt="">
@@ -725,7 +728,7 @@
                               </a>
                           </div>
                       </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6 col-sm-6">
                             <div class="widget-two">
                                 <h5>Contact Us</h5>
                                 <ul class="footer-address-list footer-d">
@@ -744,7 +747,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-2">
+                        <div class="col-lg-2 col-md-6 col-sm-6">
                             <div class="widget-three link-hover">
                                     <h5>Contact Us</h5>
                                     <ul class="footer-address-list link-hover">
@@ -757,7 +760,7 @@
                                       </ul>
                             </div>
                         </div>
-                        <div class="col-lg-4">
+                        <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="widget-four">
                                 <h5>Latest Blogs</h5>
                                 <div class="single-blog">
@@ -799,7 +802,7 @@
                       <div class="col-lg-4">
                            <div class="email-subcribe ">
                                <h5 class="mb10">Top App Development Companies</h5>
-                               <p>News letter dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Enter your email</p>
+                               <p class="mb20 mt20">News letter dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Enter your email</p>
                            </div>
                       </div>
                       <div class="col-lg-8 v-center">
