--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
                 <a href="#" id="close"><img src="./icon/colse.png" alt=""></a>
             </div>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Team</a></li>
-                <li><a href="#">Case Study</a></li>
-                <li><a href="#">Shortcode</a></li>
-                <li><a href="#">Protfolio</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="whyus.html">Why Us</a></li>
+                <li><a href="ourteam.html">Team</a></li>
+                <li><a href="case-study.html">Case Study</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="team-single.html">Team Single</a></li>
             </ul>
         </div>
         <!--End Mobile -->
@@ -99,7 +98,7 @@
                 </div>
             </div>
         </header>
-        <!--End Header -->
+        <!--End Header --> 
        
         <!--Start hero -->
         <section class="hero-section hero-bg-bg1 bg-gradient">
